--- a/style.css
+++ b/style.css
@@ -87,6 +87,16 @@ body {
   font-weight: bold;
 }
 
+.containerInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 8rem;
+  border: solid 4px rgb(13, 240, 13);
+  border-radius: 50%;
+}
+
 .entrada {
   width: 7rem;
   height: 7rem;
@@ -96,12 +106,12 @@ body {
   border-radius: 50%;
   background-color: black;
   color: rgb(13, 240, 13);
-  border: solid 2px red; 
+  border: solid 2px red;
 }
 
 .numero {
-  width: 3rem;
-  height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
   border-radius: 50%;
   font-size: 2rem;
   margin-inline: 0.5rem;
@@ -125,10 +135,9 @@ body {
   font-size: 2.5rem;
 }
 
-.mi-confetti{
+.mi-confetti {
   z-index: 10;
 }
-
 
 /*customClass para swal.fire----------------*/
 
@@ -149,14 +158,6 @@ body {
 .mi-html-container {
   font-size: 1.2rem;
 }
-
-/* .mi-icono {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  background-color: black;
-  color: rgb(75, 22, 221);
-} */
 
 .swal2-icon.mi-icono.swal2-success .swal2-success-ring {
   border-color: rgb(13, 240, 13); /* Cambia el color del anillo */
@@ -225,15 +226,21 @@ body {
     height: 45%;
   }
 
+  .containerInput {
+    width: 7rem;
+    height: 7rem;
+    border: solid 3px rgb(13, 240, 13);
+  }
+
   .entrada {
     width: 6rem;
     height: 6rem;
   }
 
   .mi-titulo {
-    color: rgb(163, 156, 156);
+    color: rgb(13, 240, 13);
     font-size: 1.2rem;
-    font-weight:lighter;
+    font-weight: lighter;
   }
 
   .mi-popup {
@@ -247,7 +254,6 @@ body {
     height: 65vh;
   }
 
-  
   .botonesNumeros {
     display: flex;
     justify-content: center;
@@ -323,7 +329,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    margin-bottom: 5rem;
     width: 100%;
     height: 33%;
   }
@@ -336,6 +342,12 @@ body {
     height: 34%;
   }
 
+  .containerInput {
+    width: 7rem;
+    height: 7rem;
+    border: solid 3px rgb(13, 240, 13);
+  }
+
   .entrada {
     width: 6rem;
     height: 6rem;
@@ -344,7 +356,7 @@ body {
   .mi-titulo {
     color: rgb(163, 156, 156);
     font-size: 1.2rem;
-    font-weight:lighter;
+    font-weight: lighter;
   }
 
   .mi-popup {
@@ -374,7 +386,7 @@ body {
     height: 2.5rem;
     border-radius: 50%;
     font-size: 1rem;
-
+    text-align: center;
     cursor: pointer;
     background-color: black;
     color: rgb(163, 156, 156);
